# src/routes/v1/index.ts
@@ -1,17 +1,10 @@
-import express from 'express';
-import { authRoutes } from '@/modules/auth';
+import { Router } from 'express';
+import { authRoutes } from '@/modules/auth/routes/auth.routes';
+import { usersRoutes } from '@/modules/users/routes/users.routes';
 
-const router = express.Router();
+const router = Router();
 
-const defaultRoutes = [
-  {
-    path: '/auth',
-    route: authRoutes,
-  },
-];
+router.use('/auth', authRoutes);
+router.use('/users', usersRoutes);
 
-defaultRoutes.forEach((route) => {
-  router.use(route.path, route.route);
-});
-
-export const v1Routes = router;
+export { router as v1Routes };
